fix glitch on AdvanceGameAction and refactoring
AdvanceGameAction would give control of the game to dead players